--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,2 +1,9 @@
-<!-- your html code here -->
-<p>Hello, I'm the navbar.html</p>
+<nav>
+    <ul>
+        <li><a href="#startboostrap">Start Boostrap</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#porfolio">Porfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
