--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,13 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="contact-container"> 
+    <h1>Contact</h1> 
+    <p>Donec ullamcorper nulla non metus auctor fringilla.
+     Vestibulum id ligula porta felis euismod semper. 
+     Praesent commodo cursus magna, vel scelerisque nisl 
+     consectetur. Fusce dapibus, tellus ac cursus commodo.
+    </p> 
+    <form> <div class="form-group"> 
+    <label for="email">Your E-mail</label> 
+    <input type="email" id="email" placeholder="Your email"> 
+</div> 
+    <div class="form-group">
